#
# See COPYRIGHT notice in top-level directory.
#
# @configure_input@

mpi_profiledir = $(datadir)/mpi-profile

nodist_mpi_profile_DATA = darshan-cc.conf \
                          darshan-cc-static.conf \
                          darshan-cxx.conf \
                          darshan-cxx-static.conf \
                          darshan-f.conf \
                          darshan-f-static.conf

EXTRA_DIST = darshan-cc.conf.in \
             darshan-cc-static.conf.in \
             darshan-cxx.conf.in \
             darshan-cxx-static.conf.in \
             darshan-f.conf.in \
             darshan-f-static.conf.in

